--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=DEBUG
 server.port=8080
+springdoc.swagger-ui.path=/swagger-ui.html
